<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context=".index">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/key_button"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/black" />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
 />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_save"
        android:layout_below="@id/app_name"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="7dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
                >

            <CheckBox
                android:id="@+id/Mechanic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Mechanic"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Accounting"
                app:layout_constraintTop_toTopOf="@+id/Accounting" />

            <CheckBox
                android:id="@+id/Accounting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Accounting"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/Mechanic"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="@string/Accounting" />

            <ImageView
                android:id="@+id/imageuser"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/app_name"
                app:srcCompat="@android:mipmap/sym_def_app_icon" />

            <Button
                android:id="@+id/Edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/key_button"
                android:text="@string/Edit_profile"
                app:backgroundTint="@color/light_blue_100"
                app:layout_constraintEnd_toStartOf="@+id/btn_view_website"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_index_name" />

            <TextView
                android:id="@+id/txt_description"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:gravity="center"
                android:text="@string/Description"
                app:layout_constraintBottom_toTopOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_index_name"
                app:layout_constraintVertical_bias="0.851" />

            <Button
                android:id="@+id/btn_view_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:autoLink="web"
                android:background="@drawable/button"
                android:text="@string/View_Website"
                android:textColor="@color/grey_500"
                app:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Edit_profile"
                app:layout_constraintTop_toTopOf="@+id/Edit_profile" />


            <TextView
                android:id="@+id/textView_index_name"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/username"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageuser" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:text="@string/Field_of_Study"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_index_name" />

            <CheckBox
                android:id="@+id/Electrical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/Electrical"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Architecture"
                app:layout_constraintTop_toTopOf="@+id/Architecture" />

            <CheckBox
                android:id="@+id/Computer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:text="@string/Computer"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <CheckBox
                android:id="@+id/Architecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/Architecture"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/Electrical"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Accounting" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="220dp"
                android:text="@string/Province_City"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/radioGroup_Province"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0" />


            <RadioGroup
                android:id="@+id/radioGroup_Province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:guidelineUseRtl="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Tehran"
                app:layout_constraintVertical_bias="1.0">

                <RadioButton
                    android:id="@+id/Tehran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/Tehran_tehran"
                    android:textAlignment="center" />

                <RadioButton
                    android:id="@+id/Gilan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/Gilan_rasht" />

                <RadioButton
                    android:id="@+id/Markazi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:text="@string/Markazi_arak" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</RelativeLayout>